# safe_numbers

./: .drone.jsonnet  .gitignore  CMakeLists.txt  README.md  SECURITY.md  build.jam  codecov.yml  proposal.adoc
.drone/: drone.bat  drone.sh
.github/: dependabot.yml
.github/workflows/: ci.yml
doc/: Jamfile.v2  antora.yml  antora_docs.sh  index.html  package-lock.json  package.json  safe_numbers-playbook.yml
doc/modules/ROOT/: nav.adoc
doc/proposal/: proposal.adoc
examples/: basic_bounded_usage.cpp  basic_usage.cpp  basic_usage_stacktrace.cpp  bit.cpp  bitwise_ops.cpp  bounded_limits.cpp  byte_conversions.cpp  charconv.cpp  checked_arithmetic.cpp  compile_fail_basic_bounded_usage_constexpr.cpp  compile_fail_basic_usage_constexpr.cpp  compile_fail_verified_overflow.cpp  construction_and_conversion.cpp  cuda.cu  cuda_error_handling.cu  cuda_error_handling_without_error_context.cu  debugger.cpp  fmt_format.cpp  generic_arithmetic.cpp  iostream.cpp  literals.cpp  overflowing_arithmetic.cpp  random.cpp  safe_numerics_comparison.cpp  safety_profile.cpp  saturating_arithmetic.cpp  std_numeric_usage.cpp  strict_arithmetic.cpp  verified_arithmetic.cpp  verified_construction.cpp  verified_mixed_ops.cpp  verified_runtime_usage.cpp  wrapping_arithmetic.cpp
extra/: safe_numbers_printer.py  safe_numbers_printer_gdb.py  safe_numbers_printer_lldb.py
include/boost/: safe_numbers.hpp
meta/: libraries.json
modules/: Jamfile  quick_test.cpp  safe_numbers.cxx
test/: CMakeLists.txt  Jamfile  compile_fail_bounded_bool_bounds.cpp  compile_fail_bounded_int_mixed_ops.cpp  compile_fail_bounded_mixed_ops.cpp  compile_fail_from_be_bytes_extent.cpp  compile_fail_from_le_bytes_extent.cpp  compile_fail_signed_bitwise.cpp  compile_fail_unsigned_literals.cpp  compile_fail_unsigned_unary_operators.cpp  compile_fail_verified_cross_type_add.cpp  compile_fail_verified_cross_type_comparison.cpp  compile_fail_verified_mixed_width_add.cpp  compile_integer_type_properties.cpp  cuda_jamfile  limits_link_1.cpp  limits_link_2.cpp  quick.cpp  test_abs_diff.cpp  test_bit.cpp  test_boundary_arithmetic.cpp  test_construct_unsigned_type.cpp  test_cuda_error_handling.cu  test_cuda_i128_add.cu  test_cuda_i128_div.cu  test_cuda_i128_mod.cu  test_cuda_i128_mul.cu  test_cuda_i128_sub.cu  test_cuda_i16_add.cu  test_cuda_i16_div.cu  test_cuda_i16_mod.cu  test_cuda_i16_mul.cu  test_cuda_i16_sub.cu  test_cuda_i32_add.cu  test_cuda_i32_div.cu  test_cuda_i32_mod.cu  test_cuda_i32_mul.cu  test_cuda_i32_sub.cu  test_cuda_i64_add.cu  test_cuda_i64_div.cu  (+363 more)
test/benchmarks/: benchmark_boost.cpp  benchmark_unsigned_addition.cpp  benchmark_unsigned_operations.cpp
test/cmake_install_test/: CMakeLists.txt
test/cmake_subdir_test/: CMakeLists.txt
test/compile_tests/: compile_test_charconv.cpp  compile_test_format.cpp  compile_test_iostream.cpp  compile_test_limits.cpp  compile_test_literals.cpp  compile_test_main_header.cpp  compile_test_unsigned_integers.cpp
test/theorems/: signed_integers.why  unsigned_integers.why
(+80 files in other folders)
